@@ -1,3 +1,7 @@
+2011-12-24
+* add a very simple verifyGraphics pre-run scan. Right now it only verifies if
+a file is a JPEG file.
+
 2011-12-23
 * stubs for adding a 'noscan' directive that scans can use to say which
 category of files they don't want to scan.
